# streaming-vlm

./: .gitignore  MANIFEST.in  README.md  infer_requirements.txt  ovo_requirements.txt  pyproject.toml  readme.md  setup.py  sft_requirements.txt  train.py
baselines/livecc/demo/: infer.py
eval/VLMEvalKit/vlmeval/: config.py  inference_video.py
eval/VLMEvalKit/vlmeval.egg-info/: PKG-INFO  requires.txt
eval/livesports3kcc/: distributed_generate_streaming.py  llm_judge.py
eval/model_compete/: eval_gpt.py  eval_livecc.py  generate.sh  generate_gpt.py  generate_gpt.sh  merge_result.py
eval/ovobench/: distributed_evaluate_ovobench.py
livecc_utils/src/livecc_utils/: generation_patch.py
scripts/: env_infer.sh  env_ovo.sh  env_sft.sh  eval_Inf-Stream-Eval.sh  eval_LiveSports3k-cc.sh  eval_OVOBench.sh  eval_VQA.sh  eval_efficiency.sh  sft_stage_1.sh  sft_stage_2.sh
src/streaming_vlm/: __init__.py
src/streaming_vlm/data/: lmm_dataset.py
src/streaming_vlm/inference/: inference.py
src/streaming_vlm/utils/: patch_liger_kernel.py  patch_trainer.py  vtt_utils.py
streaming_vlm/data/: lmm_dataset.py
streaming_vlm/eval/VLMEvalKit/: requirements.txt  test.py
streaming_vlm/eval/efficiency/: efficiency_test.py
streaming_vlm/eval/livesports3kcc/: distributed_generate_caption.py  distributed_generate_livecc.py
streaming_vlm/eval/model_compete/: eval_streaming_qwen.py  generate.sh  generate_segments.py  judge.py  merge.sh  merge_score.py  score.sh  (+1 more)
streaming_vlm/inference/: inference.py  streaming_args.py
streaming_vlm/utils/: get_qwen_range.py  patch_liger_kernel.py
(+23 files in other folders)
