[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "streaming_vlm"
version = "0.0.0"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "streaming vlm package"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["streaming_vlm"]


[project.urls]
Homepage = "https://github.com/rahim-xelpmoc/streaming-vlm"
Issues = "https://github.com/rahim-xelpmoc/streaming-vlm/issues"