[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "streaming_vlm"
version = "0.0.0"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "streaming vlm package"
readme = "readme.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]


[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]


[project.urls]
Homepage = "https://github.com/rahim-xelpmoc/streaming-vlm"
Issues = "https://github.com/rahim-xelpmoc/streaming-vlm/issues"